# shiki-platform

./: .coderabbit.yaml  .editorconfig  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml
crates/agent-core/: Cargo.toml
crates/agent-core/bindings/: ToolName.ts
crates/agent-core/src/: agent.rs  agent_gate.rs  approval.rs  budget.rs  checkpoint.rs  context.rs  event.rs  lib.rs  loop_detect.rs  plan.rs  profile.rs  tool.rs  vocab.rs  workspace.rs
crates/agent-core/tests/: agent_it.rs  resume_it.rs
crates/api/: Cargo.toml
crates/api/src/: config.rs  data_refs.rs  dev_seed.rs  error.rs  gateway_ai.rs  gateway_functions.rs  health.rs  keycloak_admin.rs  lib.rs  main.rs  miniapp_triggers.rs  miniapp_triggers_tests.rs  oidc.rs  openapi.rs  server.rs  server_tests.rs  skill_catalog.rs  state.rs  telemetry.rs  wiring.rs  wiring_gateway.rs  wiring_gui.rs  wiring_websearch.rs  workflow_catalog.rs
crates/api/tests/: app_platform_http.rs  auth_flow.rs  chat_http.rs  collab_ws_it.rs  data_records_http.rs  http.rs  keycloak_admin.rs  office_http.rs  redis_session.rs  tabular_http_it.rs  ui_action_workflow_it.rs  workflow_e2e_it.rs  workflow_http_it.rs  workflow_nodes_it.rs  workflow_registration_it.rs
crates/app-gateway/: Cargo.toml
crates/app-gateway/src/: b1.rs  builtin.rs  installation.rs  lib.rs  notification.rs  oauth.rs  ports.rs  router.rs  scope_map.rs  token.rs  token_exchange.rs  usage.rs
crates/app-gateway/tests/: ai_it.rs  b1_it.rs  capability_it.rs  gateway_it.rs  keycloak_mock.rs
crates/app-platform/: Cargo.toml
crates/app-platform/src/: bundle.rs  egress_guard.rs  functions.rs  functions_tests.rs  install.rs  install_ops.rs  lib.rs  manifest.rs  registry.rs  sign.rs  skill_import.rs  skill_install.rs  store.rs  trusted_key.rs  usage.rs  validate.rs
crates/app-platform/tests/: app_platform_it.rs  functions_it.rs  install_it.rs
crates/artifact/: Cargo.toml
crates/artifact/src/: lib.rs  model.rs  share.rs  store.rs  versions.rs
crates/artifact/tests/: artifact_it.rs
crates/authz/: Cargo.toml
crates/authz/bindings/: CapabilityScope.ts
crates/authz/model/: authorization-model.fga  authorization-model.json
crates/authz/src/: client.rs  context.rs  error.rs  fga_dsl.rs  fga_http.rs  ident.rs  lib.rs  migrate.rs  model.rs  object.rs  scope.rs  subject.rs  vocab.rs
crates/authz/tests/: check.rs  retenant.rs
crates/chat/: Cargo.toml
crates/chat/src/: approver.rs  artifacts.rs  autonomous.rs  csv_tool.rs  document_tool.rs  error.rs  gui_actions.rs  lib.rs  model.rs  office_draft_tool.rs  office_live_tool.rs  office_tool.rs  selection.rs  skill.rs  skill_catalog.rs  skill_tool.rs  slide_templates.rs  slide_tool.rs  workflow_tool.rs  workspace.rs
crates/chat/tests/: autonomous_it.rs  checkpoint_it.rs  emit_workflow_it.rs  generation_it.rs  genui_it.rs  skill_apply_it.rs  skill_tool_it.rs  threads_it.rs  worker_it.rs  workspace_containment_it.rs
crates/collab/: Cargo.toml
crates/collab/src/: doc.rs  doc_kind.rs  error.rs  hub.rs  lib.rs  saver.rs  session.rs  store.rs
crates/collab/tests/: ai_edit_it.rs  collab_it.rs  note_it.rs  note_roundtrip.rs  slide_ai_edit_it.rs  slide_it.rs
crates/durable/: Cargo.toml
crates/durable/src/: claim.rs  events.rs  lib.rs  pubsub.rs  spec.rs
crates/durable/tests/: durable_it.rs
crates/gui/: Cargo.toml
crates/gui/bindings/: AccordionItem.ts  AccordionProps.ts  ActionBinding.ts  ActionRef.ts  BadgeItem.ts  BadgeListProps.ts  BadgeTone.ts  ButtonProps.ts  ButtonVariant.ts  CalloutProps.ts  CalloutTone.ts  CellAlign.ts  CellValue.ts  ChartKind.ts  ChartPoint.ts  ChartSpec.ts  CheckboxGroupProps.ts  CodeBlockProps.ts  ComparisonProps.ts  ComparisonRow.ts  ComponentKind.ts  ComponentPin.ts  ContainerProps.ts  DateProps.ts  FewShotExample.ts  FormField.ts  FormProps.ts  GeoBounds.ts  GeoPoint.ts  GuiValidationError.ts  HandlerBinding.ts  HandlerKind.ts  ItineraryDay.ts  ItineraryItem.ts  ItineraryKind.ts  ItineraryProps.ts  KeyValueItem.ts  KeyValueProps.ts  KnowledgeScope.ts  Layout.ts  (+45 more)
crates/gui/src/: action.rs  chart.rs  dispatch.rs  domain.rs  emit_tool.rs  form_fields.rs  layout.rs  lib.rs  map.rs  miniapp.rs  miniapp_store.rs  question.rs  skill.rs  skill_store.rs  spec.rs  store.rs  validate.rs  validator.rs  vocab.rs
crates/gui/tests/: skill_miniapp_it.rs  skill_validate_test.rs  uispec_it.rs  validate_test.rs
crates/jobq/: Cargo.toml
crates/jobq/src/: lib.rs
crates/jobq/tests/: jobq_it.rs
crates/llm-gateway/: Cargo.toml
crates/llm-gateway/src/: accounting.rs  config.rs  gateway.rs  langfuse.rs  lib.rs  model.rs  provider.rs
crates/llm-gateway/tests/: langfuse_it.rs  providers_anthropic_it.rs  providers_openai_it.rs
crates/office/: Cargo.toml
crates/office/src/: compose.rs  edit.rs  error.rs  lib.rs  suite.rs
crates/office/templates/: blank.docx
crates/office/tests/: compose_it.rs  edit_it.rs  wopi_it.rs
crates/rag/: Cargo.toml
crates/rag/src/: admin.rs  authz_filter.rs  chunker.rs  config.rs  embedding.rs  error.rs  fulltext.rs  fulltext_tantivy.rs  fusion.rs  lib.rs  parser.rs  parser_http.rs  rerank.rs  search.rs  search_types.rs  store.rs  types.rs  vector_qdrant.rs  vector_store.rs
crates/rag/tests/: drive_upload_it.rs  fulltext_it.rs  http_clients.rs  pipeline_it.rs  search_authz_it.rs  search_scope_it.rs  search_scripted_it.rs  vector_qdrant_it.rs
crates/sandbox-agent-proto/: Cargo.toml
crates/sandbox-agent-proto/src/: lib.rs
crates/sandbox-bench/: Cargo.toml
crates/sandbox-client/: Cargo.toml  build.rs
crates/sandbox-guest-agent/: Cargo.toml
crates/sandbox-netns/: Cargo.toml
crates/sandbox-orchestrator/: Cargo.toml
crates/script-runtime/: .gitignore  Cargo.toml  build.rs
crates/secrets/: Cargo.toml
crates/storage/: Cargo.toml
crates/tabular/: Cargo.toml
crates/websearch/: Cargo.toml
crates/workflow-engine/: Cargo.toml
ingestion-worker/: .dockerignore  Dockerfile  README.md  pyproject.toml
ingestion-worker/tests/: conftest.py  test_edit.py  test_endpoints.py  test_parse.py  test_schemas.py
(+930 files in other folders)
