[workspace]
resolver = "2"
members = ["crates/*"]
# vendor/secure-exec は我々が所有するフォーク（独自 workspace）。shiki の workspace には入れず、
# path 依存で参照する。clippy/test/llvm-cov/machete/file-size は自作コードのみに当たり、
# cargo deny だけが依存グラフ全体（V8 等）を検査する。docs/sandbox/fork-policy.md 参照。
exclude = ["vendor/secure-exec"]

[workspace.package]
edition = "2021"
rust-version = "1.96"
license = "UNLICENSED"
publish = false

[workspace.dependencies]
# async ランタイム / HTTP サーバ
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "timeout"] }

# DB
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "migrate",
    "chrono",
    "uuid",
] }

# 設定
figment = { version = "0.10", features = ["env", "toml"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 認証 (JWT/JWKS) / HTTP クライアント
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }

# BFF セッション (Redis) / Cookie / トークン生成 (PKCE/CSRF/session id)
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
axum-extra = { version = "0.10", features = ["cookie"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
# cookie crate(axum-extra 経由)と同じ time 0.3 を使い Max-Age を組み立てる。
time = "0.3"

# 型契約 / codegen
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
ts-rs = "10"

# 可観測性 (OTel エコシステムはバージョンを揃える)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-opentelemetry = "0.31"
opentelemetry = "0.30"
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.30", features = ["grpc-tonic", "trace", "metrics"] }
opentelemetry-semantic-conventions = "0.30"
axum-tracing-opentelemetry = "0.29"

# 共通
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

# ストレージ（ObjectStore / content-addressing）
# S3 互換オブジェクトストア（MinIO）。GCS 実装は Phase 8 で同 trait 裏に追加する。
aws-config = { version = "1", default-features = false, features = [
    "behavior-version-latest",
    "rustls",
] }
aws-sdk-s3 = { version = "1", default-features = false, features = [
    "behavior-version-latest",
    "rustls",
    "rt-tokio",
] }
aws-credential-types = "1"
aws-smithy-types = "1"
bytes = "1"
futures = "0.3"
hex = "0.4"

# サンドボックス（所有フォーク secure-exec の薄いクライアント transport のみ依存）。
# 重い V8/execution/kernel は sidecar バイナリ側でのみコンパイルされる（別プロセス spawn）。
secure-exec-client = { path = "vendor/secure-exec/crates/secure-exec-client" }
secure-exec-sidecar-protocol = { path = "vendor/secure-exec/crates/sidecar-protocol" }
secure-exec-vm-config = { path = "vendor/secure-exec/crates/vm-config" }
secure-exec-bridge = { path = "vendor/secure-exec/crates/bridge" }

# gRPC（sandbox-client 契約・lock 済みの 0.13 系に固定）
tonic = "0.13"
tonic-build = "0.13"
prost = "0.13"
prost-types = "0.13"
tokio-stream = "0.1"

# プロパティテスト（proto round-trip / validate.rs）
proptest = "1"

# 内部クレート
shiki-authz = { path = "crates/authz" }
shiki-storage = { path = "crates/storage" }
shiki-jobq = { path = "crates/jobq" }
shiki-rag = { path = "crates/rag" }
shiki-llm-gateway = { path = "crates/llm-gateway" }
shiki-agent-core = { path = "crates/agent-core" }
shiki-chat = { path = "crates/chat" }

# ワークスペース共通 lint（各 crate は `[lints] workspace = true` で opt-in）。
# CI は `cargo clippy --all-targets --all-features -- -D warnings` で warn も含めゲート化する。
# グループlint（pedantic 等）は priority = -1 とし、個別 allow/deny が勝つようにする。
[workspace.lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }
unreachable_pub = "warn"
# missing_docs は今回見送り（全公開アイテムへの doc 付与は blast radius が過大）。

[workspace.lints.clippy]
# --- AI 生成コードの品質劣化に効く必須の床 ---
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
large_enum_variant = "deny"
too_many_arguments = "deny"
cognitive_complexity = "warn"   # nursery 単体を明示有効化（閾値は clippy.toml）
print_stdout = "deny"
print_stderr = "deny"
# --- 上乗せ層：pedantic（ノイズ/日本語と相性の悪いものは個別 allow）---
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"          # 日本語コメント/固有名詞で誤検知するため
# DB バインド用の数値キャスト（usize/u64 → i64/u32）が大半で、値域は実質的に有界。
# try_from を全箇所に撒くと可読性を損なうわりに安全性の向上が乏しいため許容する。
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
# ローカルな補助 struct/const/derive を「使う直前」に置く配置は可読性を高めるため許容する。
items_after_statements = "allow"
