[package]
name = "shiki-api"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
version = "0.0.0"

[lib]
name = "api"

[[bin]]
name = "shiki-server"
path = "src/main.rs"

[[bin]]
name = "shiki-admin"
path = "src/bin/shiki-admin.rs"

[[bin]]
name = "export-openapi"
path = "src/bin/export-openapi.rs"

[dependencies]
shiki-authz.workspace = true
shiki-data.workspace = true
shiki-storage.workspace = true
shiki-rag.workspace = true
shiki-chat.workspace = true
shiki-websearch.workspace = true
shiki-llm-gateway.workspace = true
shiki-agent-core.workspace = true
shiki-sandbox-client.workspace = true
shiki-artifact.workspace = true
shiki-gui.workspace = true
shiki-secrets.workspace = true
shiki-workflow-engine.workspace = true
shiki-script-runtime.workspace = true

tokio.workspace = true
axum.workspace = true
futures.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
figment.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
redis.workspace = true
axum-extra.workspace = true
rand.workspace = true
sha2.workspace = true
base64.workspace = true
time.workspace = true
utoipa.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"

# shiki-authz / shiki-storage / shiki-rag は lib 名 `authz` / `storage` / `rag` で参照する
# ため cargo-machete が誤検出する（実際は使用中）。
[package.metadata.cargo-machete]
ignored = ["shiki-authz", "shiki-data", "shiki-storage", "shiki-rag", "shiki-chat", "shiki-llm-gateway", "shiki-agent-core", "shiki-sandbox-client", "shiki-websearch", "shiki-artifact", "shiki-gui", "shiki-secrets", "shiki-workflow-engine", "shiki-script-runtime"]

[lints]
workspace = true
