[package]
name = "shiki-app-gateway"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
version = "0.0.0"

[lib]
name = "app_gateway"

[dependencies]
shiki-authz.workspace = true
shiki-storage.workspace = true

axum.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }
jsonwebtoken.workspace = true
reqwest.workspace = true
utoipa.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio.workspace = true

[package.metadata.cargo-machete]
ignored = ["shiki-storage"]

[lints]
workspace = true
