[package]
name = "shiki-app-gateway"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
version = "0.0.0"

[lib]
name = "app_gateway"

[dependencies]
shiki-authz.workspace = true
shiki-storage.workspace = true

axum.workspace = true
tower.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }
jsonwebtoken.workspace = true
reqwest.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio.workspace = true
http-body-util = "0.1"

[package.metadata.cargo-machete]
# shiki-authz は lib 名 `authz` で参照するため machete が誤検知する（他クレートと同様）。
ignored = ["shiki-authz", "shiki-storage"]

[lints]
workspace = true
