[package]
name = "shiki-app-gateway"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
version = "0.0.0"

[lib]
name = "app_gateway"

[dependencies]
shiki-authz.workspace = true
shiki-storage.workspace = true
shiki-data.workspace = true
shiki-llm-gateway.workspace = true

axum.workspace = true
tower.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }
jsonwebtoken.workspace = true
reqwest.workspace = true
async-trait.workspace = true
tokio.workspace = true
futures.workspace = true

[dev-dependencies]
http-body-util = "0.1"
shiki-artifact.workspace = true

[package.metadata.cargo-machete]
# shiki-authz / shiki-data は lib 名 `authz` / `data` で参照するため machete が誤検知する。
ignored = ["shiki-authz", "shiki-storage", "shiki-data", "shiki-llm-gateway"]

[lints]
workspace = true
