[package]
name = "shiki-app-platform"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
version = "0.0.0"

[lib]
name = "app_platform"

[dependencies]
tracing.workspace = true
shiki-authz.workspace = true
shiki-artifact.workspace = true
shiki-storage.workspace = true
shiki-data.workspace = true
shiki-agent-core.workspace = true
shiki-gui.workspace = true

sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
semver = "1"
uuid = { workspace = true, features = ["v4"] }
utoipa.workspace = true

[dev-dependencies]
tokio.workspace = true
reqwest.workspace = true
async-trait.workspace = true

[package.metadata.cargo-machete]
ignored = ["shiki-authz", "shiki-storage", "shiki-data", "shiki-agent-core", "shiki-gui"]

[lints]
workspace = true
