[package]
name = "shiki-app-platform"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
version = "0.0.0"

[lib]
name = "app_platform"

[dependencies]
shiki-authz.workspace = true
shiki-artifact.workspace = true
shiki-storage.workspace = true
shiki-data.workspace = true
shiki-agent-core.workspace = true
shiki-gui.workspace = true
shiki-app-gateway.workspace = true
shiki-script-runtime.workspace = true
shiki-secrets.workspace = true
shiki-llm-gateway.workspace = true

sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
tracing.workspace = true
reqwest.workspace = true
tokio.workspace = true
async-trait.workspace = true
url.workspace = true
cron.workspace = true
sha2.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
semver = "1"
uuid = { workspace = true, features = ["v4"] }
utoipa.workspace = true

[dev-dependencies]
axum.workspace = true
tokio.workspace = true

[package.metadata.cargo-machete]
ignored = ["shiki-authz", "shiki-artifact", "shiki-storage", "shiki-data", "shiki-agent-core", "shiki-gui", "shiki-app-gateway", "shiki-script-runtime", "shiki-secrets", "shiki-llm-gateway"]

[lints]
workspace = true
