[package]
name = "shiki-authz"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
version = "0.0.0"

[lib]
name = "authz"

[dependencies]
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
thiserror.workspace = true
async-trait.workspace = true
ts-rs.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true }
uuid.workspace = true

[lints]
workspace = true
