[package]
name = "shiki-chat"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
version = "0.0.0"

[lib]
name = "chat"

[dependencies]
shiki-authz.workspace = true
shiki-storage.workspace = true
shiki-jobq.workspace = true
shiki-rag.workspace = true
shiki-llm-gateway.workspace = true
shiki-agent-core.workspace = true
shiki-websearch.workspace = true
# generative UI（emit_ui ツール・chat.submit ハンドラ・Task 6.4/6.5）＋skill 適用（Task 6.9）。
shiki-gui.workspace = true
# AI 編集ツール emit_workflow / read_workflow（保存パイプライン検証・Task 10.13）。
shiki-workflow-engine.workspace = true
shiki-artifact.workspace = true
# claim/リース/fencing/(id,seq) 追記/Redis pub/sub の共通プリミティブ（Task 10.0）。
shiki-durable.workspace = true

tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
futures.workspace = true
chrono.workspace = true
uuid = { workspace = true, features = ["v4"] }
# チャットの DTO / SSE イベント型を単一定義し api 層に手書きミラーを作らない（codegen が正）。
utoipa.workspace = true

[dev-dependencies]
tokio = { workspace = true }
# 結合テスト（generation_it / worker_it）は authz モック＋DB 直操作＋stub gateway のため実依存を dev でも引く。
shiki-authz.workspace = true
shiki-jobq.workspace = true
shiki-llm-gateway.workspace = true
sqlx.workspace = true
uuid = { workspace = true, features = ["v4"] }
async-trait.workspace = true
serde_json.workspace = true
futures.workspace = true
reqwest.workspace = true

# lib 名 authz/storage/jobq/rag/llm_gateway/agent_core で参照するため machete が誤検出する。
[package.metadata.cargo-machete]
ignored = [
    "shiki-authz",
    "shiki-storage",
    "shiki-jobq",
    "shiki-rag",
    "shiki-llm-gateway",
    "shiki-agent-core",
    "shiki-websearch",
    "shiki-gui",
    "shiki-workflow-engine",
    "shiki-artifact",
    "shiki-durable",
]

[lints]
workspace = true
