[package]
name = "shiki-durable"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
version = "0.0.0"

[lib]
name = "durable"

[dependencies]
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
redis.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
futures.workspace = true
chrono.workspace = true

[lints]
workspace = true
