[package]
name = "shiki-gui"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
version = "0.0.0"

[lib]
name = "gui"

[[bin]]
name = "export-gui-ts"
path = "src/bin/export-ts.rs"

[dependencies]
shiki-authz.workspace = true
shiki-artifact.workspace = true
# 監査（AuditRecorder）は storage の単一実装を共有する。
shiki-storage.workspace = true
# `Tool` トレイト（emit_ui）とツール名語彙（アクション束縛の閉集合照合）。
shiki-agent-core.workspace = true

serde.workspace = true
serde_json.workspace = true
# serde パース失敗の位置（path）を LLM 自己修正/エディタ表示向けに残す。
serde_path_to_error = "0.1"
thiserror.workspace = true
uuid = { workspace = true, features = ["v4"] }
# SpecValidator が AuditRecorder を組むための PgPool（データアクセスは artifact/storage 経由のみ）。
sqlx.workspace = true
async-trait.workspace = true
tracing.workspace = true
# UI アクション監査の params ダイジェスト（本文は監査に残さない）。
sha2 = { workspace = true }
# カタログ・UiSpec 型を TS へ生成（codegen が正）。
ts-rs = { workspace = true }
# GuiValidationError を API エラー body スキーマとして公開する。
utoipa.workspace = true

[dev-dependencies]
tokio.workspace = true
sqlx.workspace = true
reqwest.workspace = true

# lib 名 authz/artifact/storage/agent_core で参照するため machete が誤検出する。
[package.metadata.cargo-machete]
ignored = ["shiki-authz", "shiki-artifact", "shiki-storage", "shiki-agent-core"]

[lints]
workspace = true
