[package]
name = "shiki-jobq"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
version = "0.0.0"

[lib]
name = "jobq"

[dependencies]
sqlx.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio.workspace = true
uuid.workspace = true

[lints]
workspace = true
