[package]
name = "shiki-sandbox-client"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
version = "0.0.0"

[lib]
name = "sandbox_client"

[features]
# orchestrator（server 側）だけが tonic の server スタブを使う。
# shiki-server（api）は default（client のみ）で依存し、server コードを引き込まない。
default = []
server = []

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
# protoc をシステムに要求しない（CI/開発の再現性）。プラットフォーム別の protoc バイナリを同梱する。
protoc-bin-vendored = "3"

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
