[package]
name = "shiki-sandbox-orchestrator"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
version = "0.0.0"

[lib]
name = "sandbox_orchestrator"

[[bin]]
name = "shiki-sandbox-orchestrator"
path = "src/bin/main.rs"

[dependencies]
shiki-sandbox-client = { path = "../sandbox-client", features = ["server"] }
secure-exec-client = { workspace = true }
secure-exec-sidecar-protocol = { workspace = true }
secure-exec-vm-config = { workspace = true }
secure-exec-bridge = { workspace = true }

tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
figment = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
